src/lib/LibNotcurses_ffi.jl


Same, but provide an assembled, packed 24 bits of rgb.
### Prototype
```c
static inline int ncchannel_set(uint32_t* channel, uint32_t rgb);
```
"""
function ncchannel_set(channel, rgb)
    @ccall libnotcurses_ffi.ncchannel_set(channel::Ptr{UInt32}, rgb::UInt32)::Cint
end

"""
    ncchannel_set_rgb8_clipped(channel, r, g, b)

Set the three 8-bit components of a 32-bit channel, and mark it as not using
the default color. Retain the other bits unchanged. r, g, and b will be
clipped to the range [0..255].
### Prototype
```c
static inline void ncchannel_set_rgb8_clipped(uint32_t* channel, int r, int g, int b);
```
"""
function ncchannel_set_rgb8_clipped(channel, r, g, b)
    @ccall libnotcurses_ffi.ncchannel_set_rgb8_clipped(channel::Ptr{UInt32}, r::Cint, g::Cint, b::Cint)::Cvoid
end

"""
    ncchannels_bchannel(channels)

Extract the background alpha and coloring bits from a 64-bit channel
pair as a single 32-bit value.
### Prototype
```c
static inline uint32_t ncchannels_bchannel(uint64_t channels);
```
"""
function ncchannels_bchannel(channels)
    @ccall libnotcurses_ffi.ncchannels_bchannel(channels::UInt64)::UInt32
end

"""
    ncchannels_fchannel(channels)

Extract the foreground alpha and coloring bits from a 64-bit channel
pair as a single 32-bit value.
### Prototype
```c
static inline uint32_t ncchannels_fchannel(uint64_t channels);
```
"""
function ncchannels_fchannel(channels)
    @ccall libnotcurses_ffi.ncchannels_fchannel(channels::UInt64)::UInt32
end

"""
    ncchannels_channels(channels)

Extract the background alpha and coloring bits from a 64-bit channel pair.
### Prototype
```c
static inline uint64_t ncchannels_channels(uint64_t channels);
```
"""
function ncchannels_channels(channels)
    @ccall libnotcurses_ffi.ncchannels_channels(channels::UInt64)::UInt64
end

"""
    ncchannels_bg_rgb_p(channels)


### Prototype
```c
static inline bool ncchannels_bg_rgb_p(uint64_t channels);
```
"""
function ncchannels_bg_rgb_p(channels)
    @ccall libnotcurses_ffi.ncchannels_bg_rgb_p(channels::UInt64)::Bool
end

"""
    ncchannels_fg_rgb_p(channels)


### Prototype
```c
static inline bool ncchannels_fg_rgb_p(uint64_t channels);
```
"""
function ncchannels_fg_rgb_p(channels)
    @ccall libnotcurses_ffi.ncchannels_fg_rgb_p(channels::UInt64)::Bool
end

"""
    ncchannels_bg_alpha(channels)

Extract 2 bits of background alpha from 'channels', shifted to LSBs.
### Prototype
```c
static inline unsigned ncchannels_bg_alpha(uint64_t channels);
```
"""
function ncchannels_bg_alpha(channels)
    @ccall libnotcurses_ffi.ncchannels_bg_alpha(channels::UInt64)::Cuint
end

"""
    ncchannels_set_bchannel(channels, channel)

Set the background alpha and coloring bits of the 64-bit channel pair
from a single 32-bit value.
### Prototype
```c
static inline uint64_t ncchannels_set_bchannel(uint64_t* channels, uint32_t channel);
```
"""
function ncchannels_set_bchannel(channels, channel)
    @ccall libnotcurses_ffi.ncchannels_set_bchannel(channels::Ptr{UInt64}, channel::UInt32)::UInt64
end

"""
    ncchannels_set_fchannel(channels, channel)

Set the foreground alpha and coloring bits of the 64-bit channel pair
from a single 32-bit value.
### Prototype
```c
static inline uint64_t ncchannels_set_fchannel(uint64_t* channels, uint32_t channel);
```
"""
function ncchannels_set_fchannel(channels, channel)
    @ccall libnotcurses_ffi.ncchannels_set_fchannel(channels::Ptr{UInt64}, channel::UInt32)::UInt64
end

"""
    ncchannels_set_channels(dst, channels)

Set the alpha and coloring bits of a channel pair from another channel pair.
### Prototype
```c
static inline uint64_t ncchannels_set_channels(uint64_t* dst, uint64_t channels);
```
"""
function ncchannels_set_channels(dst, channels)
    @ccall libnotcurses_ffi.ncchannels_set_channels(dst::Ptr{UInt64}, channels::UInt64)::UInt64
end

"""
    ncchannels_set_bg_alpha(channels, alpha)

Set the 2-bit alpha component of the background channel.
### Prototype
```c
static inline int ncchannels_set_bg_alpha(uint64_t* channels, unsigned alpha);
```
"""
function ncchannels_set_bg_alpha(channels, alpha)
    @ccall libnotcurses_ffi.ncchannels_set_bg_alpha(channels::Ptr{UInt64}, alpha::Cuint)::Cint
end

"""
    ncchannels_fg_alpha(channels)

Extract 2 bits of foreground alpha from 'channels', shifted to LSBs.
### Prototype
```c
static inline unsigned ncchannels_fg_alpha(uint64_t channels);
```
"""
function ncchannels_fg_alpha(channels)
    @ccall libnotcurses_ffi.ncchannels_fg_alpha(channels::UInt64)::Cuint
end

"""
    ncchannels_set_fg_alpha(channels, alpha)

Set the 2-bit alpha component of the foreground channel.
### Prototype
```c
static inline int ncchannels_set_fg_alpha(uint64_t* channels, unsigned alpha);
```
"""
function ncchannels_set_fg_alpha(channels, alpha)
    @ccall libnotcurses_ffi.ncchannels_set_fg_alpha(channels::Ptr{UInt64}, alpha::Cuint)::Cint
end

"""
    ncchannels_reverse(channels)

Returns the channels with the fore- and background's color information
swapped, but without touching housekeeping bits. Alpha is retained unless
it would lead to an illegal state: HIGHCONTRAST, TRANSPARENT, and BLEND
are taken to OPAQUE unless the new value is RGB.
### Prototype
```c
static inline uint64_t ncchannels_reverse(uint64_t channels);
```
"""
function ncchannels_reverse(channels)
    @ccall libnotcurses_ffi.ncchannels_reverse(channels::UInt64)::UInt64
end

"""
    ncchannels_combine(fchan, bchan)

Creates a new channel pair using 'fchan' as the foreground channel
and 'bchan' as the background channel.
### Prototype
```c
static inline uint64_t ncchannels_combine(uint32_t fchan, uint32_t bchan);
```
"""
function ncchannels_combine(fchan, bchan)
    @ccall libnotcurses_ffi.ncchannels_combine(fchan::UInt32, bchan::UInt32)::UInt64
end

"""
    ncchannels_fg_palindex(channels)


### Prototype
```c
static inline unsigned ncchannels_fg_palindex(uint64_t channels);
```
"""
function ncchannels_fg_palindex(channels)
    @ccall libnotcurses_ffi.ncchannels_fg_palindex(channels::UInt64)::Cuint
end

"""
    ncchannels_bg_palindex(channels)


### Prototype
```c
static inline unsigned ncchannels_bg_palindex(uint64_t channels);
```
"""
function ncchannels_bg_palindex(channels)
    @ccall libnotcurses_ffi.ncchannels_bg_palindex(channels::UInt64)::Cuint
end

"""
    ncchannels_fg_rgb(channels)

Extract 24 bits of foreground RGB from 'channels', shifted to LSBs.
### Prototype
```c
static inline uint32_t ncchannels_fg_rgb(uint64_t channels);
```
"""
function ncchannels_fg_rgb(channels)
    @ccall libnotcurses_ffi.ncchannels_fg_rgb(channels::UInt64)::UInt32
end

"""
    ncchannels_bg_rgb(channels)

Extract 24 bits of background RGB from 'channels', shifted to LSBs.
### Prototype
```c
static inline uint32_t ncchannels_bg_rgb(uint64_t channels);
```
"""
function ncchannels_bg_rgb(channels)
    @ccall libnotcurses_ffi.ncchannels_bg_rgb(channels::UInt64)::UInt32
end

"""
    ncchannels_fg_rgb8(channels, r, g, b)

Extract 24 bits of foreground RGB from 'channels', split into subchannels.
### Prototype
```c
static inline uint32_t ncchannels_fg_rgb8(uint64_t channels, unsigned* r, unsigned* g, unsigned* b);
```
"""
function ncchannels_fg_rgb8(channels, r, g, b)
    @ccall libnotcurses_ffi.ncchannels_fg_rgb8(channels::UInt64, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::UInt32
end

"""
    ncchannels_bg_rgb8(channels, r, g, b)

Extract 24 bits of background RGB from 'channels', split into subchannels.
### Prototype
```c
static inline uint32_t ncchannels_bg_rgb8(uint64_t channels, unsigned* r, unsigned* g, unsigned* b);
```
"""
function ncchannels_bg_rgb8(channels, r, g, b)
    @ccall libnotcurses_ffi.ncchannels_bg_rgb8(channels::UInt64, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::UInt32
end

"""
    ncchannels_set_fg_rgb8(channels, r, g, b)

Set the r, g, and b channels for the foreground component of this 64-bit
'channels' variable, and mark it as not using the default color.
### Prototype
```c
static inline int ncchannels_set_fg_rgb8(uint64_t* channels, unsigned r, unsigned g, unsigned b);
```
"""
function ncchannels_set_fg_rgb8(channels, r, g, b)
    @ccall libnotcurses_ffi.ncchannels_set_fg_rgb8(channels::Ptr{UInt64}, r::Cuint, g::Cuint, b::Cuint)::Cint
end

"""
    ncchannels_set_fg_rgb8_clipped(channels, r, g, b)

Same, but clips to [0..255].
### Prototype
```c
static inline void ncchannels_set_fg_rgb8_clipped(uint64_t* channels, int r, int g, int b);
```
"""
function ncchannels_set_fg_rgb8_clipped(channels, r, g, b)
    @ccall libnotcurses_ffi.ncchannels_set_fg_rgb8_clipped(channels::Ptr{UInt64}, r::Cint, g::Cint, b::Cint)::Cvoid
end

"""
    ncchannels_set_fg_palindex(channels, idx)


### Prototype
```c
static inline int ncchannels_set_fg_palindex(uint64_t* channels, unsigned idx);
```
"""
function ncchannels_set_fg_palindex(channels, idx)
    @ccall libnotcurses_ffi.ncchannels_set_fg_palindex(channels::Ptr{UInt64}, idx::Cuint)::Cint
end

"""
    ncchannels_set_fg_rgb(channels, rgb)

Same, but set an assembled 24 bit channel at once.
### Prototype
```c
static inline int ncchannels_set_fg_rgb(uint64_t* channels, unsigned rgb);
```
"""
function ncchannels_set_fg_rgb(channels, rgb)
    @ccall libnotcurses_ffi.ncchannels_set_fg_rgb(channels::Ptr{UInt64}, rgb::Cuint)::Cint
end

"""
    ncchannels_set_bg_rgb8(channels, r, g, b)

Set the r, g, and b channels for the background component of this 64-bit
'channels' variable, and mark it as not using the default color.
### Prototype
```c
static inline int ncchannels_set_bg_rgb8(uint64_t* channels, unsigned r, unsigned g, unsigned b);
```
"""
function ncchannels_set_bg_rgb8(channels, r, g, b)
    @ccall libnotcurses_ffi.ncchannels_set_bg_rgb8(channels::Ptr{UInt64}, r::Cuint, g::Cuint, b::Cuint)::Cint
end

"""
    ncchannels_set_bg_rgb8_clipped(channels, r, g, b)

Same, but clips to [0..255].
### Prototype
```c
static inline void ncchannels_set_bg_rgb8_clipped(uint64_t* channels, int r, int g, int b);
```
"""
function ncchannels_set_bg_rgb8_clipped(channels, r, g, b)
    @ccall libnotcurses_ffi.ncchannels_set_bg_rgb8_clipped(channels::Ptr{UInt64}, r::Cint, g::Cint, b::Cint)::Cvoid
end

"""
    ncchannels_set_bg_palindex(channels, idx)

Set the cell's background palette index, set the background palette index
bit, set it background-opaque, and clear the background default color bit.
### Prototype
```c
static inline int ncchannels_set_bg_palindex(uint64_t* channels, unsigned idx);
```
"""
function ncchannels_set_bg_palindex(channels, idx)
    @ccall libnotcurses_ffi.ncchannels_set_bg_palindex(channels::Ptr{UInt64}, idx::Cuint)::Cint
end

"""
    ncchannels_set_bg_rgb(channels, rgb)

Same, but set an assembled 24 bit channel at once.
### Prototype
```c
static inline int ncchannels_set_bg_rgb(uint64_t* channels, unsigned rgb);
```
"""
function ncchannels_set_bg_rgb(channels, rgb)
    @ccall libnotcurses_ffi.ncchannels_set_bg_rgb(channels::Ptr{UInt64}, rgb::Cuint)::Cint
end

"""
    ncchannels_fg_default_p(channels)

Is the foreground using the "default foreground color"?
### Prototype
```c
static inline bool ncchannels_fg_default_p(uint64_t channels);
```
"""
function ncchannels_fg_default_p(channels)
    @ccall libnotcurses_ffi.ncchannels_fg_default_p(channels::UInt64)::Bool
end

"""
    ncchannels_fg_palindex_p(channels)

Is the foreground using indexed palette color?
### Prototype
```c
static inline bool ncchannels_fg_palindex_p(uint64_t channels);
```
"""
function ncchannels_fg_palindex_p(channels)
    @ccall libnotcurses_ffi.ncchannels_fg_palindex_p(channels::UInt64)::Bool
end

"""
    ncchannels_bg_default_p(channels)

Is the background using the "default background color"? The "default
background color" must generally be used to take advantage of
terminal-effected transparency.
### Prototype
```c
static inline bool ncchannels_bg_default_p(uint64_t channels);
```
"""
function ncchannels_bg_default_p(channels)
    @ccall libnotcurses_ffi.ncchannels_bg_default_p(channels::UInt64)::Bool
end
